--- a/horiseon.html
+++ b/horiseon.html
@@ -26,18 +26,20 @@
             </ul>
         </div>
     </div>
-    <div class="hero"></div> 
+    <!-- semantic corrction on div element-->
+    <section class="hero">
     <div class="content">
-        <!--id element added to syntax for proper accessibility-->
+        <!--id element added to syntax for proper accessibility
+        also add alt image attributes. -->
         <div id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpeg" class="float-left" />
+            <img src="../horiseon/assets/images/search-engine-optimization.jpeg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpeg" class="float-right" />
+            <img src="../horiseon/assets/images/online-reputation-management.jpeg" class="float-right" />
             <h2>Online Reputation Management</h2>
 
             <p>
@@ -45,7 +47,7 @@
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpeg" class="float-left" />
+            <img src="../horiseon/assets/images/social-media-marketing.jpeg" class="float-left" />
             <h2>Social Media Marketing</h2>
 
             <p>
@@ -53,7 +55,7 @@
             </p>
 </div>
     </div>
-    <div class="benefits">
+<!----> <section class="benefit">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
