--- a/horiseon.html
+++ b/horiseon.html
@@ -13,6 +13,7 @@
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
+            <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,6 +25,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
+            </nav>
         </div>
     </div>
     <!-- semantic corrction on div element-->
@@ -31,6 +33,7 @@
     <div class="content">
         <!--id element added to syntax for proper accessibility
         also add alt image attributes. -->
+
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="../horiseon/assets/images/search-engine-optimization.jpeg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -56,9 +59,11 @@
 </div>
     </div>
 <!----> <section class="benefit">
+
+
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="../horiseon/assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -66,19 +71,21 @@
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="../horiseon/assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
+
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="../horiseon/assets/images/cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
     </div>
+
     <div class="footer">
         <!--h4 changed tag-->
         <h4>Made with ❤️️ by Horiseon</h4>
