--- a/horiseon.html
+++ b/horiseon.html
@@ -13,6 +13,7 @@
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
+            <!--nav tags added -->
             <nav>
             <ul>
                 <li>
@@ -29,20 +30,20 @@
         </div>
     </div>
     <!-- semantic corrction on div element-->
-    <section class="hero">
+    <div class="hero"></div>
     <div class="content">
         <!--id element added to syntax for proper accessibility
         also add alt image attributes. -->
 
         <div id="search-engine-optimization" class="search-engine-optimization">
-            <img src="../horiseon/assets/images/search-engine-optimization.jpeg" class="float-left" />
+            <img src="../horiseon/assets/images/search-engine-optimization.jpeg" alt="search engine optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="../horiseon/assets/images/online-reputation-management.jpeg" class="float-right" />
+            <img src="../horiseon/assets/images/online-reputation-management.jpeg" alt="online reputation" class="float-right" />
             <h2>Online Reputation Management</h2>
 
             <p>
@@ -50,20 +51,20 @@
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="../horiseon/assets/images/social-media-marketing.jpeg" class="float-left" />
+            <img src="../horiseon/assets/images/social-media-marketing.jpeg" alt="social media marketing meeting" class="float-left" />
             <h2>Social Media Marketing</h2>
 
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
+        </div>
+    </section>
 </div>
     </div>
-<!----> <section class="benefit">
-
-
+<!----> <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="../horiseon/assets/images/lead-generation.png" />
+            <img src="../horiseon/assets/images/lead-generation.png"></img>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -71,7 +72,7 @@
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="../horiseon/assets/images/brand-awareness.png" />
+            <img src="../horiseon/assets/images/brand-awareness.png"></img>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -83,6 +84,8 @@
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
+        </section>
+        
         </div>
     </div>
 
@@ -93,6 +96,7 @@
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
+</footer>
 </body>
 
 </html>
