--- a/horiseon.html
+++ b/horiseon.html
@@ -61,7 +61,9 @@
     </section>
 </div>
     </div>
-<!----> <div class="benefits">
+
+                                          <!---->
+ <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="../horiseon/assets/images/lead-generation.png"></img>
